renamed password change functions and fixed password not changing
